# el_bot_botak

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
app/: app.py  config.py
app/Routes/: bot_router.py
app/controller/: bot_controller.py  send_telegram_requirments.py
app/models/: bot_user_model.py  save_user_data.py
app/utils/: factory.py
